# CANN_Parallel_Evaluator

./: .gitignore  README.md  README_en.md  README_zh.md  pyproject.toml
docs/: api.md  architecture.md  compile_pipeline.md  engineering.md  sandbox_design.md
docs/knowledge/: README.md  architecture.md  content_reference.md
examples/: elu_fn.py  relu_complete.py  relu_fn.py  relu_org.py
examples/relu_components/: infer_shape_body.cpp  kernel_entry_body.cpp  kernel_impl.cpp  op_host.cpp  op_host_tiling.h  op_kernel.cpp  output_alloc_code.cpp  pybinding.cpp  tiling_fields.json  tiling_func_body.cpp
src/cann_parallel_evaluator/: __init__.py  cann_init_task.py  core_types.py  data_structures.py  evaluator.py  signature_parser.py
src/cann_parallel_evaluator/knowledge/: __init__.py  api_scanner.py  provider.py
src/cann_parallel_evaluator/knowledge/api/: advanced_reference.md  quick_reference.md
src/cann_parallel_evaluator/knowledge/constraints/: critical_compact.md  critical_full.md
src/cann_parallel_evaluator/knowledge/examples/: __init__.py  add.md  attention.md  convolution.md  curated_examples.py  gather.md  layer_norm.md  matmul.md  pooling.md  reduce_sum.md  relu.md  resize.md  softmax.md
src/cann_parallel_evaluator/knowledge/primers/: __init__.py  attention.md  broadcast.md  convolution.md  elementwise.md  index.md  level0_programming_model.md  level0_programming_model.py  level1_patterns.py  matmul.md  normalization.md  other.md  pooling.md  reduction.md  resize.md  softmax.md
src/cann_parallel_evaluator/knowledge/tiling/: cube_fundamentals.md  (+4 more)
(+10 files in other folders)
