[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cann-parallel-evaluator"
version = "0.1.0"
description = "Ascend C operator evaluation framework with multi-NPU parallel support"
requires-python = ">=3.10"
dependencies = [
    # torch and numpy are provided by the NPU runtime environment (torch-npu)
    # and must NOT be installed via pip to avoid version conflicts.
]

[tool.hatch.build.targets.wheel]
packages = ["src/cann_parallel_evaluator"]
